--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "workspace",
+  "name": "@houssam/workspace",
   "version": "1.0.0",
   "description": ",-----.,--.                  ,--. ,---.   ,--.,------.  ,------.     '  .--./|  | ,---. ,--.,--. ,-|  || o   \\  |  ||  .-.  \\ |  .---'     |  |    |  || .-. ||  ||  |' .-. |`..'  |  |  ||  |  \\  :|  `--,      '  '--'\\|  |' '-' ''  ''  '\\ `-' | .'  /   |  ||  '--'  /|  `---.      `-----'`--' `---'  `----'  `---'  `--'    `--'`-------' `------'     -----------------------------------------------------------------",
   "main": "server.js",
   "dependencies": {
+    "@linclark/pkg": "^1.0.2",
+    "async": "^0.2.10",
     "express": "^3.2.6",
-    "socket.io": "^0.9.17",
-    "async": "^0.2.10"
+    "socket.io": "^0.9.17"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HoussamBedja/npm-tests.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HoussamBedja/npm-tests/issues"
+  },
+  "homepage": "https://github.com/HoussamBedja/npm-tests#readme"
 }
